# AstroFight

./: .env.example  .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vercel.json  vite.config.ts
anchor/: Anchor.toml  Cargo.toml  README.md
anchor/programs/astrofight_escrow/: Cargo.toml
anchor/programs/astrofight_escrow/src/: lib.rs
anchor/programs/astrofight_match_state/: Cargo.toml
anchor/programs/astrofight_match_state/src/: lib.rs
api/: _utils.ts
api/_server/: matchApi.js
api/match/: finalize.ts  prepare.ts
server/: matchApi.ts  viteMatchApi.ts
src/: App.tsx  index.css  main.tsx
src/components/: GameViewport.tsx  HudOverlay.tsx  LobbyOverlay.tsx  MobileControls.tsx
src/components/scene/: AstroFightScene.tsx
src/config/: env.ts  game.ts
src/game/: engine.ts  store.ts  types.ts
src/hooks/: useGameAudio.ts  useGameInput.ts  useMediaQuery.ts
src/network/: broadcastTransport.ts  magicblock.ts  types.ts  webrtcTransport.ts
src/solana/: AppProviders.tsx  escrow.ts  matchService.ts
