[package]
name = "astrofight_escrow"
version = "0.1.0"
description = "AstroFight escrow program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "astrofight_escrow"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []

[dependencies]
anchor-lang = "1.0.0"
astrofight_match_state = { path = "../astrofight_match_state", features = ["no-entrypoint"] }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }
