[package]
name = "astrofight_match_state"
version = "0.1.0"
description = "AstroFight realtime match-state program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "astrofight_match_state"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []

[dependencies]
anchor-lang = "1.0.0"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }
